# flyswatter

./: .env.docker  .env.example  .env.test.example  .env.test.template  .gitignore  Dockerfile  Dockerfile_worker  README.md  demo.py  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: commit.yml  makefile.yml  release.yml
app/: main.py
app/api/: dto.py  routes_artifact.py  routes_comment.py  routes_common.py  routes_health.py  routes_issue.py  routes_job.py  routes_metrics.py  routes_project.py  routes_sentry.py  routes_user.py
app/artifacts/: pdf_generator.py
app/blob/: storage.py
app/core/: config.py  errors.py  metrics.py  monitoring.py  security.py
app/db/: __init__.py  base.py  create_database.py  factory.py  models.py  monthly_report.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 19f1dc0b3bf9_added_domain_objects_with_uuid.py  1df98f551a78_updated_user_and_created_other_domain_.py  4594d60b5608_added_refresh_token.py  68f337ef00c9_added_url_and_dates_to_artifact.py  6dce8d020c1e_created_job_and_artifact_table.py  80dca1987de7_nullable_token_revoked_at.py  efb21e3e178a_added_user.py
app/worker/: celery_app.py  tasks.py
tests/: conftest.py  conftests.py  test_blob_storage.py  test_db_ping.py  test_health.py  test_routes_comment.py  test_routes_common.py  test_routes_issue.py  test_routes_project.py  test_routes_user.py  test_worker_tasks.py
