[tool.poetry]
name = "flyswatter"
version = "0.1.0"
description = ""
authors = ["Pedro Kauati <pedrokauati@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
psycopg = {extras = ["binary"], version = "^3.2.9"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
