[tool.poetry]
name = "flyswatter"
version = "0.1.0"
description = ""
authors = ["Pedro Kauati <pedrokauati@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
psycopg = {extras = ["binary"], version = "^3.2.9"}
alembic = "^1.16.5"
python-multipart = "^0.0.20"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.10.1"
freezegun = "^1.5.5"
sqlalchemy-utils = "^0.42.0"
black = "^25.9.0"
isort = "^6.0.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.38.0"}
prometheus-client = "^0.23.1"
celery = "^5.5.3"
redis = "^6.4.0"
fpdf = "^1.7.2"
minio = "^7.2.18"
mypy = "^1.18.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
